
* Tweaked default `theme_grey()` background colour from grey90 to grey92:
  this makes the background recede into the background a little more.

* Bumped the default `size` for `geom_smooth()` up to 1. To continue to use
  the previous size, set `size = 0.5`. `geom_smooth()` gains explicit
  `method`, `se` and `formula` arguments to make it easier to see what the
  most important options are.

* `geom_jitter()` gains `width` and `height` arguments to make it easier
  to control the amount of jittering without using the lengthy
  `position_jitter()` function (#1116)

* ggplot2 now exports `alpha()` from the scales package. This means you
  don't need to do `library(scales)` or `scales::alpha()` to access that
  handy function (#1107).

* Improved documentation for `aes()`, `layer()` and many geoms and scales. I've
  tried to reduce the use of `...` so that you can see all the documentation in
  one place rather than having to navigate through multiple pages. Use
  of `qplot()` in examples has been minimised (#1123, @hrbrmstr)

* new theme setting `panel.ontop` (logical) allows placing background elements
  (e.g., gridlines) on top of data. Usually used with blank or transparent
  `panel.background`.  (@noamross. #551)

* Add `stroke` aesthetic to `geom_point` controlling the stroke width of the
  border for shape types 21 - 25 (#1133, @SeySayux)

ggplot2 1.0.1
----------------------------------------------------------------

* Fixes to pass `R CMD check --run-donttest` in R-devel.

* Improvements in to order of colours and legend display of continuous colour
  scales extracted from colorbrewer palettes in `scale_*_distiller()` (@jiho, 1076)

ggplot2 1.0.0
----------------------------------------------------------------

NEW FEATURES

* New coordinate system for small scale maps. `coord_quickmap()` computes and
  sets the correct aspect ratio between one degree of latitude and one degree
  of longitude at the centre of the plotted region. It does not perform full